# decyphertek-ai

./: .gitignore  .gitignore.bak  README.md  architecture-plan.md  build-apk.sh  build-linux.sh  engineer.sh  experimental.sh  install-component.sh  install.sh  launch.sh  poetry.toml  pyproject.toml  requirements.txt  research.txt  store-update.sh  uninstall.sh  version.yaml
.github/workflows/: decyphertek-ai.yml
agent-store/: README.md  __init__.py
agent-store/adminotaur/: adminotaur.json  adminotaur.py
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
app-store/ansible/: README.md  pyproject.toml
app-store/ansible/src/: dashboard.py  main.py  main.py.bak
app-store/langtek/: .gitignore  README.md  pyproject.toml  research.md
app-store/langtek/src/: article_detail_screen.py  article_extractor.py  cache_service.py  dictionary_management_screen.py  dictionary_service.py  feed_management_screen.py  interactive_translator_widget.py  main.py  rss_service.py  sentence_widget.py  settings_screen.py  tts_settings_screen.py
cli/: .gitignore  README.md  build-release.sh  build.sh  cli-ai.py  issues.txt  pyproject.toml
cli/configs/: README.md  ai-config.json  ai-config.yaml  slash-commands.json  slash-commands.yaml
logs/: error.txt
mcp-store/servers/web-search/: web.py
mobile/: .flutter-plugins-dependencies  main.py  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
scripts/: store-manager.sh
simple_mobile_dir/: main.py
src/: build.sh  main.py  main.py (lines 107-115)  pyproject.toml  requirements.txt
src/agent/: __init__.py  chat_manager.py  langchain_agent.py  langchain_agent.py.bak  mcp_tools.py  store_manager.py
src/auth/: __init__.py  api_keys.py  credentials.py  encryption.py  session.py
src/chat/: __init__.py  chat_sessions.py  duckduckgo_client.py  ollama_client.py  openrouter_client.py
src/mcp/: __init__.py  github_store.py  models.py  server_manager.py
src/pygpt/: __init__.py  client.py  models.py
src/rag/: __init__.py  chroma_engine.py  document_manager.py  embeddings.py
src/ui/: __init__.py  admin_guide.py  admin_view.py  agent_store.py  api_settings.py  app_store.py  chat.py  dashboard.py  docs.py  docs_menu.py  docs_overlay.py  editor.py  login.py  mcp_store.py  ollama_settings.py  rag_view.py  setup.py  terminal.py
src/utils/: __init__.py  config.py  logger.py
store/agent/: cache.json
store/mcp/: cache.json
wiki/: decyphertek-ai-architecture.md  directory.md  soul.md
wiki/memory/: README.md
wiki/projects/: README.md
wiki/research/: README.md
workflows/: decyphertek-ai.sh
