[tool.poetry]
name = "decyphertek-ai-mobile"
version = "0.1.0"
description = "DecypherTek AI - Custom Mobile Chat App with OpenRouter, ChromaDB, and MCP Integration"
authors = ["DecypherTek <admin@decyphertek.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.config.virtualenvs]
in-project = true

[tool.poetry.config.keyring]
enabled = false

[tool.flet]
# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "DecypherTek AI"

# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.decyphertek"

[tool.flet.app]
# Path to the directory with your Flet app's Python code
path = "src"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.24.1"
httpx = "^0.27.0"
cryptography = "^42.0.8"
qdrant-client = "^1.7.0"

# AI Clients
ollama = "^0.6.0"

# MCP Integration
mcp = "^1.6.0"
smithery = "^0.4.2"

# MCP Servers - Web Search
duckduckgo-search = "^8.1.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
langchain = "==0.3.27"
pydantic = "^2.0.0"
numpy = ">=2,<3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"